crates/tmark-writers/tests/snapshots/fixtures__reference-bare@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
See \[?sec:intro\] and \[?ein05\], not #link("mailto:me@example.com")[me\@example.com].

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
