crates/tmark-writers/tests/snapshots/fixtures__reference-bracketed@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>As shown by <span class="unresolved">[?ein05]</span>; <span class="unresolved">[?AI2027]</span>.</p>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
