crates/tmark-writers/tests/snapshots/fixtures__reference-bracketed@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
As shown by see [?ein05], pp. 33-35; [?AI2027], ch. 1.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
