crates/tmark-writers/tests/snapshots/fixtures__reference-citation-deprecated@html.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
<p>Slow to talk <span class="unresolved">[?ein05]</span>, said the tutor. <span class="unresolved">[?ein05]</span>; <span class="unresolved">[?AI2027]</span> He failed the test, <a href="https://doi.org/10.1007/s00016-014-0153-5">doi:10.1007/s00016-014-0153-5</a> see <span class="unresolved">[?AI2027]</span> and <sup class="footnote-ref"><a href="#fn-note" id="fnref-note">1</a></sup>.</p>
<section class="footnotes">
<ol>
<li id="fn-note">A real footnote. <a href="#fnref-note" class="footnote-backref">↩</a></li>
</ol>
</section>

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
