crates/tmark-writers/tests/snapshots/fixtures__reference-citation-deprecated@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Slow to talk [?ein05], said the tutor. [?ein05]; [?AI2027] He failed the test, \href{https://doi.org/10.1007/s00016-014-0153-5}{10.1007/s00016-014-0153-5} see [?AI2027] and \footnote{A real footnote.}.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
