crates/tmark-writers/tests/snapshots/fixtures__reference-citation-deprecated@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Slow to talk #cite(<ein05>), said the tutor. #cite(<ein05>)#cite(<AI2027>) He failed the test, #link("https://doi.org/10.1007/s00016-014-0153-5")[10.1007/s00016-014-0153-5] see #cite(<AI2027>) and #footnote[A real footnote.].

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": true,
  "citations": [
    "ein05",
    "AI2027"
  ],
  "acronyms": [],
  "index": [],
  "counters": []
}
