crates/tmark-writers/tests/snapshots/fixtures__reference-citation-flags@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Time is relative \cite{ein05} and \cite{ein05}; as \textcite{ein05} showed, and \textcite[p. 33]{ein05}; \cite{ko20}, the year \citeyear{ein05}.

---requires---
{
  "packages": [],
  "fragments": [
    "ts-bibliography"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": true,
  "citations": [
    "ein05",
    "ko20"
  ],
  "acronyms": [],
  "index": [],
  "counters": []
}
