crates/tmark-writers/tests/snapshots/fixtures__reference-citation-flags@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Time is relative #cite(<ein05>) and #cite(<ein05>); as #cite(<ein05>, form: "prose") showed, and #cite(<ein05>, supplement: [p. 33], form: "prose")#cite(<ko20>), the year #cite(<ein05>, form: "year").

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": true,
  "citations": [
    "ein05",
    "ko20"
  ],
  "acronyms": [],
  "index": [],
  "counters": []
}
